--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
                 </div>
                 <nav class="right_column">
                     <a href="#">Home</a>
-                    <a href="#">Service</a>
                     <a href="#">About</a>
                     <a href="#">Gallery</a>
-                    <a href="#">Contact Us</a>
+                    <a href="#">Contact</a>
                     <a href="#">Login</a>
                 </nav>
             </div>
@@ -260,7 +259,7 @@
         </section>
         <!-- Our Sponspors section design end -->
     <footer>
-        <div class="container">
+        <div class="container hide">
             <p>All rights reserved copyright @2023 startup landing page design by <span> Saiful Arafat</span></p>
         </div>  
     </footer>
