medium mobile respo Done

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </section>
         <!-- Our Sponspors section design end -->
     <footer>
-        <div class="container hide">
+        <div class="container">
             <p>All rights reserved copyright @2023 startup landing page design by <span> Saiful Arafat</span></p>
         </div>  
     </footer>
